--- a/Proyecto-final-Java/src/main/resources/application.properties
+++ b/Proyecto-final-Java/src/main/resources/application.properties
@@ -13,5 +13,8 @@ spring.h2.console.enabled=true
 spring.h2.console.path=/h2-console
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.H2Dialect
 
+spring-doc.swagger-ui.path=/swagger-ui.html
+spring-doc.api-docs.enabled=true
+spring-doc.swagger-ui.enabled=true
 
 spring.jpa.hibernate.ddl-auto=update
